Add START_HERE.txt for project overview and quick start guide; remove outdated TESTING_GUIDE.md and USER_SUMMARY.md; delete VERIFICATION_REPORT.md; update Razorpay credentials in config; enhance fetch requests with credentials for CSRF protection; ensure all systems are production ready and well-documented.

--- a/razorpay-php/public/payment.html
+++ b/razorpay-php/public/payment.html
@@ -360,6 +360,7 @@
             "../api/payment.php?action=create_order",
             {
               method: "POST",
+              credentials: "same-origin",
               headers: {
                 "Content-Type": "application/json",
               },
@@ -415,6 +416,7 @@
             "../api/payment.php?action=verify_payment",
             {
               method: "POST",
+              credentials: "same-origin",
               headers: {
                 "Content-Type": "application/json",
               },
@@ -454,7 +456,14 @@
       async function loadPaymentHistory() {
         try {
           const response = await fetch(
-            "../api/payment.php?action=get_user_payments"
+            "../api/payment.php?action=get_user_payments",
+            {
+              method: "GET",
+              credentials: "same-origin",
+              headers: {
+                Accept: "application/json",
+              },
+            }
           );
           const data = await response.json();
 
@@ -507,7 +516,13 @@
 
       async function logout() {
         try {
-          await fetch("../api/auth.php?action=logout");
+          await fetch("../api/auth.php?action=logout", {
+            method: "GET",
+            credentials: "same-origin",
+            headers: {
+              Accept: "application/json",
+            },
+          });
           window.location.href = "auth.html";
         } catch (error) {
           console.error("Logout failed:", error);
